@@ -1,3 +1,7 @@
+2011-05-20  Hui Zhu  <teawater@gmail.com>
+
+	* tracepoint.c (tfile_trace_find): Return directly when num is -1.
+
 2011-05-19  Tom Tromey  <tromey@redhat.com>
 
 	* python/py-inferior.c (python_inferior_exit): Use
